--- a/static/css/works.css
+++ b/static/css/works.css
@@ -32,6 +32,8 @@
     text-align: left;
     margin-bottom: 3rem;
     cursor: pointer;
+    text-decoration: none;
+    color: #000;
 }
 
 .works_button {
@@ -180,6 +182,8 @@
     text-align: left;
     margin-bottom: 3rem;
     cursor: pointer;
+    text-decoration: none;
+    color: #000;
 }
 
 .works_button {
@@ -379,6 +383,8 @@
     margin: 1rem 0.5rem;
     position: relative;
     cursor: pointer;
+    text-decoration: none;
+    color: #000;
 }
 
 .works_button {
