--- a/static/css/index.css
+++ b/static/css/index.css
@@ -72,10 +72,9 @@ body {
   }
 }
 
-@keyframes blink {
-  0% { opacity: 0; }
-  50% { opacity: 1; }
-  100% { opacity: 0; }
+@keyframes floatUpDown {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-15px); }
 }
   
 @media all and (min-width:1024px) {
@@ -133,7 +132,7 @@ body {
     color: white;
     left: 50%;
     transform: translateX(-50%);
-    animation: blink 2s infinite;
+    animation: floatUpDown 2s infinite;
   }
 
   /* 네비게이션 바 */
