site renew1 upload

--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -80,7 +80,7 @@
         <h2 class="main_three_text_one">Continue</h2>
       </div>
       <div class="main_three_text_two">
-        스튜디오야수가 보유한 8편의 작품으로 현재 진행 중인 콘텐츠들입니다.
+        스튜디오야수가 보유한 7편의 판권으로 현재 진행 중인 콘텐츠들입니다.
       </div>
       <div class="works_container_three">
         {% for works in continue_ott_works %}
